archived-reference/5.0/PackageManagement/Unregister-PackageSource.md
---
external help file: Microsoft.PowerShell.PackageManagement.dll-Help.xml
Locale: en-US
Module Name: PackageManagement
ms.date: 05/24/2019
online version: https://learn.microsoft.com/previous-versions/powershell/module/packagemanagement/unregister-packagesource?view=powershell-5.0&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Unregister-PackageSource
---

# Unregister-PackageSource

## SYNOPSIS
Removes a registered package source.

## SYNTAX

### SourceBySearch

```
Unregister-PackageSource [[-Source] <string>] [-Location <string>] [-Credential <pscredential>]
 [-Force] [-ForceBootstrap] [-WhatIf] [-Confirm] [-ProviderName <string>] [<CommonParameters>]
```

### SourceByInputObject

```
Unregister-PackageSource -InputObject <PackageSource[]> [-Credential <pscredential>] [-Force]
 [-ForceBootstrap] [-WhatIf] [-Confirm] [<CommonParameters>]
```

### PSModule:SourceByInputObject

```
Unregister-PackageSource [-Credential <pscredential>] [-Force] [-ForceBootstrap] [-WhatIf]
 [-Confirm] [-PackageManagementProvider <string>] [-Scope <string>] [-PublishLocation <string>]
 [<CommonParameters>]
```

### PSModule:SourceBySearch

```
Unregister-PackageSource [-Credential <pscredential>] [-Force] [-ForceBootstrap] [-WhatIf]
 [-Confirm] [-PackageManagementProvider <string>] [-Scope <string>] [-PublishLocation <string>]
 [<CommonParameters>]
```

## DESCRIPTION

The `Unregister-PackageSource` cmdlet removes a registered package source. Package sources are
always managed by a package provider. To find package sources, use the `Get-PackageSource` cmdlet.

## EXAMPLES

### Example 1: Unregister a package source for the Nuget provider

The `Unregister-PackageSource` cmdlet unregisters a package source from the local computer. The
**Location** and **Provider** parameters can be used to further specify the source to remove.

```
PS> Unregister-PackageSource -Source MyNuGet
```

The `Unregister-PackageSource` cmdlet uses the **Source** parameter to specify which source to
remove.

### Example 2: Use a PackageSource object to unregister a package

This example uses the `Get-PackageSource` and `Unregister-PackageSource` to unregister a package
source. The **PackageSource** object is stored in a variable.

```
PS> $pkgsource = Get-PackageSource -Name MyNuGet
PS> Unregister-PackageSource -InputObject $pkgsource
```

The `$pkgsource` variable stores the **PackageSource** created by the `Get-PackageSource` cmdlet.
`Unregister-PackageSource` uses the `$pkgsource` as input to the **InputObject** parameter.

As an alternative, the `Unregister-PackageSource` cmdlet can specify a value for the **InputObject**
parameter:

`Unregister-PackageSource -InputObject ( Get-PackageSource -Name MyNuGet )`

## PARAMETERS

### -Confirm

Prompts you for confirmation before running the cmdlet.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -Credential

Specifies a user account that has permission to access the computer and run commands. Type a user
name, such as **User01**, **Domain01\User01**, or enter a **PSCredential** object, generated by the
`Get-Credential` cmdlet. If you type a user name, you're prompted for a password.

When the **Credential** parameter isn't specified, the current user account is used.

```yaml
Type: PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Force

Forces the command to run without asking for user confirmation. Overrides restrictions that prevent
`Unregister-PackageSource` from succeeding, with the exception of security.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ForceBootstrap

Indicates that `Unregister-PackageSource` forces **PackageManagement** to automatically uninstall
the package provider for the specified package source.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -InputObject

Accepts pipeline input that specifies the **PackageSource** object from the `Get-PackageSource`
cmdlet. **InputObject** accepts the **PackageSource** object as a `Get-PackageSource` value or a
variable that contains the object.

```yaml
Type: PackageSource[]
Parameter Sets: SourceByInputObject
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -Location

Specifies the location to which a package source points. The value of this parameter can be a URI, a
file path, or any other destination format that is supported by the package provider.

```yaml
Type: String
Parameter Sets: SourceBySearch
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -PackageManagementProvider

Specifies the **PackageManagement** provider.

```yaml
Type: String
Parameter Sets: PSModule:SourceByInputObject, PSModule:SourceBySearch
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ProviderName

Specifies the provider name.

```yaml
Type: String
Parameter Sets: SourceBySearch
Aliases: Provider
Accepted values: msi, Programs, msu, Bootstrap, PSModule, nuget, chocolatey

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -PublishLocation

Specifies the publish location.

```yaml
Type: String
Parameter Sets: PSModule:SourceByInputObject, PSModule:SourceBySearch
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Scope

Specifies the scope of the Package Source. The acceptable values for this parameter are: AllUsers and CurrentUser.

```yaml
Type: String
Parameter Sets: PSModule:SourceByInputObject, PSModule:SourceBySearch
Aliases:
Accepted values: CurrentUser, AllUsers

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Source

Specifies the friendly name of the package source.

```yaml
Type: String
Parameter Sets: SourceBySearch
Aliases: Name

Required: False
Position: 0
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf

Shows what would happen if `Unregister-PackageSource` cmdlet is run. The cmdlet isn't run.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable,
-InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose,
-WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### `Unregister-PackageSource` accepts **PackageSource** objects from the pipeline as input.

## OUTPUTS

### `Unregister-PackageSource` doesn't generate any output.

## NOTES

Including a package provider in a command can make dynamic parameters available to a cmdlet. Dynamic
parameters are specific to a package provider. The `Get-Help` cmdlet lists a cmdlet's parameter sets
and includes the provider's parameter set.

## RELATED LINKS

[about_PackageManagement](../Microsoft.PowerShell.Core/About/about_PackageManagement.md)

[Get-Credential](../Microsoft.PowerShell.Security/Get-Credential.md)

[Get-PackageSource](Get-PackageSource.md)

[Register-PackageSource](Register-PackageSource.md)

[Set-PackageSource](Set-PackageSource.md)
